# recaptcha_ia_solver

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: solve_demo_page.py
recaptcha_ia_solver/: __init__.py  solver.py
scripts/: benchmark.py  train_classifier.py
tests/: test_solver.py
